unpackaged/main/default/objects/Activity/fields/Days_Since_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Due_Date__c</fullName>
    <formula>IF(IsClosed  = False, IF( TODAY() -   ActivityDate   &gt; 0, TODAY() - ActivityDate  , 0),  Task_Complete_Date__c  -  ActivityDate )</formula>
    <label>Days Since Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>