unpackaged/main/default/objects/Activity/fields/Referral_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Referral_Mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Mentioned</label>
    <type>Checkbox</type>
</CustomField>