unpackaged/main/default/objects/Activity/fields/Task_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Complete_Date__c</fullName>
    <label>Task Complete Date</label>
    <type>Date</type>
</CustomField>